--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,26 @@
-.App {
-  text-align: center;
-}
+@import url("https://fonts.googleapis.com/css?family=Raleway:400,500");
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  vertical-align: baseline;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div {
+  position: relative;
+  z-index: 2;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#wrapper {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 100vh;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div#quote-box {
+  background-color: #fff;
+  width: 450px;
+  padding: 40px 50px;
+  display: table;
 }
